--- a/.gitignore
+++ b/.gitignore
@@ -26,12 +26,12 @@
 
 # debug
 npm-debug.log*
-yarn-debug.log*
+yarn-debug.log*uu
 yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env.local
 
 # vercel
 .vercel
