--- a/components.json
+++ b/components.json
@@ -7,7 +7,7 @@
     "config": "tailwind.config.ts",
     "css": "src/app/style/globals.css",
     "baseColor": "neutral",
-    "cssVariables": true,
+    "cssVariables": false,
     "prefix": ""
   },
   "aliases": {
